Nasty FF3 bug from @swebster: 'focus rect for RSS/h1 in FF3 Mac causes scrollbars on overflow:auto ul float container'

--- a/data/static/common.css
+++ b/data/static/common.css
@@ -36,7 +36,7 @@ html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pr
             letter-spacing: 0.033em;
         }
             .header ul {
-                overflow:       auto;
+                overflow:       hidden;
                 width:          37.987em;
                 margin:         0 auto;
             }
